testsuite/tests/parser/should_fail/T15209.stderr

T15209.hs:6:10: error:
    Not in scope: type constructor or class ‘~#’
    Suggested fix:
      Perhaps use one of these:
        ‘~’ (imported from GHC.Exts), ‘~~’ (imported from GHC.Exts)
